Fix overflow issue for logo images that are too small.

--- a/style.css
+++ b/style.css
@@ -1150,6 +1150,7 @@ a:active {
 	border: 2px solid white;
 	color: white;
 	text-decoration: none;
+	overflow: hidden;
 }
 
 .site-logo a:hover,
